--- a/index.html
+++ b/index.html
@@ -13,11 +13,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+        rel="stylesheet">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+        rel="stylesheet">
 
     <script type="module" src="scripts/getdates.js" defer></script>
 </head>
@@ -58,10 +61,10 @@
         </section>
     </main>
     <footer>
-        <p>© <span id="current-year"></span> Thomas Bingham | Utah</p>
+        <p>© <span id="current-year"></span> | Thomas Bingham | Utah</p>
         <p>Last Modified: <span id="lastModified"></span></p>
     </footer>
-    
+
 </body>
 
 </html>
