--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 
-    <script type="module" src="scripts/temples.js" defer></script>
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body>
     <header>
