--- a/review.html
+++ b/review.html
@@ -28,11 +28,11 @@
     </header>
 
 <body>
-    <p>You have sumbitted this form <span id="submission-counter"></span></span> times</p>
+    <p>You have sumbitted this form <span id="submission-counter">0</span></span> times</p>
 </body>
 <footer>
     <p>© <span id="current-year"></span> | Thomas Bingham | Utah</p>
-    <p>Last Modified: <span id="lastModified"></span></p>
+    <p>Last Modified: <p id="lastModified"></p></p>
 </footer>
 
 </html>
