half point - final project

--- a/review.html
+++ b/review.html
@@ -32,7 +32,7 @@
 </body>
 <footer>
     <p>© <span id="current-year"></span> | Thomas Bingham | Utah</p>
-    <p>Last Modified: <p id="lastModified"></p></p>
+    <p>Last Modified: <span id="lastModified"></span></p>
 </footer>
 
 </html>
