--- a/project/2025-schedule.html
+++ b/project/2025-schedule.html
@@ -37,7 +37,9 @@
         <img id="nike-image" src="images/nike.webp" alt="Nike logo">
     </header>
     <main>
-
+        <h1>BYU Football</h1>
+        <h2>2025 Schedule</h2>
+        <div id="schedule-container-2025"></div>
 
 
     </main>
