--- a/project/greatest-wins.html
+++ b/project/greatest-wins.html
@@ -37,7 +37,9 @@
         <img id="nike-image" src="images/nike.webp" alt="Nike logo">
     </header>
     <main>
-
+        <h1>BYU Football</h1>
+        <h2>Greatest Wins</h2>
+        <div id="greatest-wins-container"></div>
 
 
     </main>
